--- a/acorn/config/database.yml
+++ b/acorn/config/database.yml
@@ -1,25 +1,30 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: mysql2
+  collation: utf8mb4_unicode_ci
+  encoding: utf8mb4
+  host: db
+  pool: 5
   timeout: 5000
+  variables:
+    sql_mode: TRADITIONAL
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: acorn_development
+  password: acorn1
+  username: root
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: acorn_test
+  password: <%= ENV['MYSQL_PASSWORD'] || 'acorn1' %>
+  username: <%= ENV['MYSQL_USER'] || 'root' %>
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: acorn_production
+  password: <%= ENV['MYSQL_PASSWORD'] %>
+  username: <%= ENV['MYSQL_USER'] %>
