--- a/acorn/Gemfile
+++ b/acorn/Gemfile
@@ -36,6 +36,7 @@ gem 'mysql2',                     '~> 0.4'
 
 gem 'webpacker'
 gem 'foreman'
+gem 'devise'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
