--- a/acorn/Gemfile
+++ b/acorn/Gemfile
@@ -36,7 +36,11 @@ gem 'mysql2',                     '~> 0.4'
 
 gem 'webpacker'
 gem 'foreman'
-gem 'devise'
+
+gem 'devise', '~> 4.4'
+gem 'geocoder', '~> 1.4'
+gem 'ransack', '~> 1.8'
+gem 'kaminari', '~> 1.1'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -53,6 +57,8 @@ group :development do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
   gem 'spring-watcher-listen', '~> 2.0.0'
+  gem 'better_errors'
+  gem "binding_of_caller"
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
