--- a/proxy/shared/50-default.conf
+++ b/proxy/shared/50-default.conf
@@ -13,7 +13,7 @@ server {
     index index.htm index.html index.php;
 
     location @rails { 
-        proxy_pass http://cms-lb; 
+        proxy_pass http://acorn-lb; 
         proxy_set_header  Host $host;
         proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header  X-Forwarded-Proto $scheme;
