--- a/acorn/Gemfile
+++ b/acorn/Gemfile
@@ -38,6 +38,7 @@ gem 'webpacker'
 gem 'foreman'
 
 gem 'devise', '~> 4.4'
+gem 'cancancan', '~> 2.0'
 gem 'geocoder', '~> 1.4'
 gem 'ransack', '~> 1.8'
 gem 'kaminari', '~> 1.1'
